[gd_scene load_steps=15 format=3 uid="uid://ckdhes2x7ec1o"]

[ext_resource type="Script" uid="uid://dm44f2qeuobc3" path="res://Scripts/wallWithLight.gd" id="1_h16p8"]
[ext_resource type="Texture2D" uid="uid://bmqa78gctx3ec" path="res://Textures/worldSprites.png" id="2_gy80k"]
[ext_resource type="AudioStream" uid="uid://bbrose1n8fiu2" path="res://Audio/Light_sound.mp3" id="3_hthrk"]

[sub_resource type="Gradient" id="Gradient_f7d17"]
offsets = PackedFloat32Array(0.418327, 0.776892)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_70tk5"]
gradient = SubResource("Gradient_f7d17")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.1, 0.9)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6aan"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cst51"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_js57u"]
resource_name = "Enter"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, -25.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_6ilf8"]
resource_name = "Exit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-25.0, -80.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}

[sub_resource type="Animation" id="Animation_glxu8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56cfh"]
_data = {
&"Enter": SubResource("Animation_js57u"),
&"Exit": SubResource("Animation_6ilf8"),
&"RESET": SubResource("Animation_glxu8")
}

[sub_resource type="Animation" id="Animation_mnx27"]
resource_name = "Flicker"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.266667, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.266667, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:stream_paused")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.266667, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"ResetTimer"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D2:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.266667, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_dabck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:stream_paused")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D2:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_itxli"]
_data = {
&"Flicker": SubResource("Animation_mnx27"),
&"RESET": SubResource("Animation_dabck")
}

[node name="wallWithLight" type="Area2D"]
z_index = 4
texture_filter = 1
linear_damp = 0.0
script = ExtResource("1_h16p8")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1, 1.077)
color = Color(0, 1, 1, 0.592157)
energy = 0.75
shadow_enabled = true
texture = SubResource("GradientTexture2D_70tk5")
texture_scale = 2.0

[node name="PointLight2D2" type="PointLight2D" parent="."]
scale = Vector2(1, 1.077)
color = Color(0, 1, 1, 0.592157)
energy = 3.0
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2
texture = SubResource("GradientTexture2D_70tk5")
texture_scale = 3.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 6
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(0, 1, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 0
visibility_layer = 2
z_index = 4
texture = ExtResource("2_gy80k")
region_enabled = true
region_rect = Rect2(34, 1, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n6aan")

[node name="LightSoundArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightSoundArea"]
shape = SubResource("RectangleShape2D_cst51")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hthrk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_56cfh")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_itxli")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="LightSoundArea" to="." method="_on_light_sound_area_area_entered"]
[connection signal="area_exited" from="LightSoundArea" to="." method="_on_light_sound_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
